# simple_TCP

./: README.md
simplified_TCP/: CMakeLists.txt  main.cpp  test_run
simplified_TCP/channel/: config.json  unreliable_channel.cpp  unreliable_channel.h
simplified_TCP/common/: packet.h
simplified_TCP/receiver/: receiver.cpp  receiver.h
simplified_TCP/sender/: sender.cpp  sender.h
